# wifi_manager

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  wifi_manager.cpp
examples/wifi_manager_test/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/wifi_manager_test/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: wifi_manager.hpp
